k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /users/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: server-service
            port:
              number: 5000
      - path: /?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: client-service
            port:
              number: 80
